# sdl3-game-engine

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  MyDoxyFile  README.md  check_dims.py  check_dims.sh  compile_flags.txt  generate_docs.sh  pngdims  pngdims.cpp  render_tail.cpp  run_dims.sh  todos.txt
enemies/: monster-1.json
game_assets/frost_knight_vector_parts/: Animations.scml
include/: Button.hpp  Components.hpp  CursorManager.hpp  EditorCanvasRenderer.hpp  EditorFileOps.hpp  EditorPopups.hpp  EditorSurfaceCache.hpp  EditorUIRenderer.hpp  EnemyCreatorScene.hpp  EnemyProfile.hpp  ErrorHandling.hpp  GameConfig.hpp  GameEvents.hpp  GameScene.hpp  Image.hpp  Level.hpp  LevelData.hpp  LevelEditorScene.hpp  LevelSerializer.hpp  LevelThree.hpp  LevelTwo.hpp  PauseMenuScene.hpp  PlayerCreatorScene.hpp  Rectangle.hpp  ScaledText.hpp  Scene.hpp  SceneManager.hpp  SettingsMenu.hpp  Sprite.hpp  SpriteSheet.hpp  Sprite_delete.hpp  SurfaceUtils.hpp  Systems.hpp  Text.hpp  TileAnimCreatorScene.hpp  TitleScene.hpp  UI.hpp  UserEvents.hpp  Window.hpp
include/engine/: README.md  Scene.hpp  SceneManager.hpp
include/game/: GameConfig.hpp  GameEvents.hpp  README.md
include/systems/: AnimationSystem.hpp  BoundsSystem.hpp  CenterPullSystem.hpp  CollisionSystem.hpp  HUDSystem.hpp  InputSystem.hpp  LadderSystem.hpp  MovementSystem.hpp  PlayerStateSystem.hpp  RenderSystem.hpp
include/tools/: EditorToolContext.hpp  HitboxTool.hpp  ModifierTools.hpp  PlacementTools.hpp
levels/: Magical.json  RetroForest.json  level1.json
players/: GHOSTED.json  Steve.json  angryorange.json  elemental_devil.json  king.json  peasant.json
src/: EditorCanvasRenderer.cpp  EditorFileOps.cpp  EditorPalette.cpp  EditorPopups.cpp  EditorSurfaceCache.cpp  EditorUIRenderer.cpp  EnemyCreatorScene.cpp  GameScene.cpp  Image.cpp  LevelEditorScene.cpp  LevelTwo.cpp  PlayerCreatorScene.cpp  Rectangle.cpp  Sprite.cpp  SpriteSheet.cpp  Text.cpp  TileAnimCreatorScene.cpp  TitleScene.cpp  Window.cpp  main.cpp
src/tools/: EnemyTool.cpp
